# autrans

./: .gitignore  Manifest-v1.12.toml  Manifest.toml  Project.toml  README.md  app_precompile.jl  build_start_prod.sh  pyproject.toml  run_tests.sh  start_API.sh  start_react_dev.sh  start_stipple_ui.sh  start_ui.sh
Autrans/: Manifest.toml
content/: sitemap.xml
docs/: API.md  TESTING.md
frontend/: .env.example  IMPLEMENTATION_COMPLETE.md  README.md  SETUP_COMPLETE.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: benchmark_api.jl  benchmark_scheduler.jl  debug_user_scenario.jl  run_api_tests.jl  start_server.jl  test_api.jl  test_constraint_combinations.jl  test_hierarchical_relaxation.jl  test_sat_logging.jl  test_user_scenario.jl  test_worker_preference_bug.jl  validate_server.jl
src/: Autrans.jl  AutransUI.py  add_meta.py  autrans.jl  autrans_typed.jl  autrans_ui.jl  autrans_v1.jl  benchHTTP.py  constraints.jl  constraints_with_tracking.jl  core.jl  cst_autrans.jl  display.jl  examples.jl  index.html  main.jl  meta_autrans.jl  new_impl_v2.jl  newj.jl  optim_autrans.jl  optimization.jl  other_search.jl  partial.jl  reactive_ui.jl  server.jl  setsitemap.py  sol.txt  staticEntry.jl  structs.jl  structures.jl  test_autrans.jl
test/: Manifest-v1.12.toml  Project.toml  runtests.jl  runtestsOLD.jl  runtestsOLD2.jl  test_api_server.jl  test_autrans.jl  test_conflict_analysis.jl  test_constraint_combinations.jl  test_debug_scenario.jl  test_equity_fix.jl  test_hierarchical_relaxation.jl  (+3 more)
(+45 files in other folders)
