[project]
name = "autrans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "streamlit-tags>=1.2.8",
    "streamlit>=1.46.1",
    "st-copy-to-clipboard>=0.1.6",
    "pyperclip>=1.9.0",
]
